      Instead, it will print out a warning. (CNY-578)

  o Build Changes:
    * It is now possible to set environment variables to use within
      Conary builds from within conary configuration files, using the
      new "environment" configuration item.  Thanks to Pavel
      Volkovitskiy for implementing this feature. (CNY-592)

  o Bug Fixes:
    * A bug that would allow recursively generated changesets to
      potentially have missing redirect flags has been fixed.
    * A bug in redirect handling when the branch changed but the trove
      name didn't has been fixed - conary will do a better job of
      determining what jobs to perform in this situation. (CNY-599, CNY-602)
    * Errors relating to PGP now just display the error instead of causing 
      conary to traceback. (CNY-591)
    * Conary sync on a locally cooked trove will no longer traceback (CNY-568)
    * --from-file and sync now work together.
    * An AssertionError that was occasionally reached by incorrect repository
      setups is now a ConaryInternalError
    * A bug when updating to a locally cooked trove when the user had 
      manually removed files has been fixed. (CNY-604)
    * CONARY files that are not accessible will no longer cause conary to
      traceback when trying to read context from them. (CNY-456)

Changes in 1.0.21:
  o Client Changes:
    * The "conary migrate" command has changed behavior significantly
      in order to make it more useful for updating a system to exactly
      match a different group.  However, this change makes it much
      less useful for updating normal systems.  "conary migrate"
      should not be used without first reading the man page
      description of its behavior.  The old migrate behavior is now
      available by using "conary sync --full".  "conary syncchildren"
      has been renamed to "conary sync", and its behavior has also
      been modified slightly as a result.  The old behavior is